--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,7 @@ jobs:
     - name: Install rst2pdf
       run: dnf install rst2pdf -y
     - name: Run build_pdf.sh
+      uses: actions/checkout@v2
       run: ./build_pdf.sh
     - name: Release
       uses: softprops/action-gh-release@v1
