--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,7 @@ jobs:
       run: ./build_pdf.sh
     - name: Release
       uses: softprops/action-gh-release@v1
+      tag_name: `date +%F`
       with:
         files: Theodore_Cowan_Resume-`date +%F`.pdf
       env:
