wip- move tag_name value in quotes for yaml syntax

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: `date +%F`
+        tag_name: "`date +%F`"
         files: Theodore_Cowan_Resume-`date +%F`.pdf
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
