--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,12 +4,21 @@ on: [push]
 
 jobs:
   build:
-
-    runs-on: ubunu-latest
-    
+    runs-on: ubuntu-latest
+    container: registry.fedoraproject.org/fedora:34 
     steps:
-    - uses: docker://fedora:31
     - name: Install rst2pdf
       run: dnf install rst2pdf -y
+    - uses: actions/checkout@v2
     - name: Run build_pdf.sh
       run: ./build_pdf.sh
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +%F)"
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: ${{ steps.date.outputs.date }}
+        files: Theodore_Cowan_Resume-${{ steps.date.outputs.date }}.pdf
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
